--- a/index.html
+++ b/index.html
@@ -1,27 +1,39 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en" class="theme-bladerunner">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Your Name - Portfolio & Blog</title>
-    <meta name="description" content="Personal portfolio and blog featuring cyberpunk-inspired design, showcasing projects and technical insights" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;500;700&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
-    <meta name="author" content="" />
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Manikandan | Portfolio</title>
+        <meta
+            name="description"
+            content="Aspiring software engineer with a passion for security and cloud engineering. Showcasing projects and technical insights."
+        />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;500;700&family=Inter:wght@300;400;500;600&display=swap"
+            rel="stylesheet"
+        />
+        <link rel="preload" as="style" href="/retro-terminal-index.css" />
+        <link rel="preload" as="style" href="/retro-vintage-index.css" />
+        <link rel="preload" as="style" href="/retro-neon-index.css" />
+        <meta name="author" content="Manikandan" />
 
-    <meta property="og:title" content="Your Name - Portfolio & Blog" />
-    <meta property="og:description" content="Personal portfolio and blog featuring cyberpunk-inspired design, showcasing projects and technical insights" />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="/public/placeholder.svg" />
+        <meta property="og:title" content="Manikandan | Portfolio & Blog" />
+        <meta
+            property="og:description"
+            content="Aspiring software engineer with a passion for security and cloud engineering. Showcasing projects and technical insights."
+        />
+        <meta property="og:type" content="website" />
+        <meta property="og:image" content="/public/placeholder.svg" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="" />
-    <meta name="twitter:image" content="/public/placeholder.svg" />
-  </head>
+        <meta name="twitter:card" content="summary_large_image" />
+        <meta name="twitter:site" content="" />
+        <meta name="twitter:image" content="/public/placeholder.svg" />
+    </head>
 
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+    <body>
+        <div id="root"></div>
+        <script type="module" src="/src/main.tsx"></script>
+    </body>
 </html>
